minikube/root/resources/statefulsets/nexus/nexus-service-stf.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus-stf
spec:
  selector:
    app: nexus-stf
  ports:
    - name: nexus-ui
      port: 8081
      targetPort: 8081

    - name: docker-registry
      port: 5000
      targetPort: 5000
