minikube/root/resources/statefulsets/nexus/nexus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5g"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - nexus.local.com
        - registry.local.com
      secretName: nexus-tls

  rules:
    - host: nexus.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-stf
                port:
                  number: 8081

    - host: registry.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-stf
                port:
                  number: 5000
